--- a/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
@@ -134,6 +134,10 @@
                 <behavior>Edit</behavior>
                 <field>Phone_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Middle_Initial__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
