--- a/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
+++ b/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
@@ -12,7 +12,7 @@
 .THIS.width-limiter {
     max-width: 1120px;
     margin: -30px 0 0 0;
-    height: 100vh;
+    height: 100%;
 
 }
 .THIS .trials-container{
