--- a/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
+++ b/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
@@ -2,5 +2,38 @@
   - Created by Yehor Dobrovolskyi
  -->
 <aura:component description="TrialsContainer">
-    Trial List
+    <aura:attribute name="TrialTDOs" type="List"/>
+
+    <aura:if isTrue="{!v.TrialTDOs}">
+        <aura:iteration items="{!v.TrialTDOs}" var="trial">
+            <div class="card-ctp">
+                <div class="{!(or(trial.ctp.Override_Recruitment_Status__c == 'Actively Enrolling', or(trial.ctp.Recruitment_Status__c == 'Enrolling', trial.ctp.Recruitment_Status__c == 'Open to Enrollment')) ? ' top-line' : '')}"></div>
+<!--                <div style="padding: 0 20px 20px 20px">-->
+                    <div style="padding: 5px 20px 5px 10px">
+                        Therapeutic area :
+                        <aura:if isTrue="{!trial.cois}">
+                            <aura:iteration items="{!trial.cois}" var="coi">
+                                {!coi.Name},
+                            </aura:iteration>
+                        </aura:if>
+                    </div>
+                    <div style="height: 1px;background: #848484;"></div>
+                    <div style="padding: 0 20px 0 10px; display: flex;">
+                        <div style="font-weight: bold; font-size: 17px; width: 90%">
+                            {!trial.ctp.Study_Code_Name__c}
+                        </div>
+                        <div style="font-size: 14px; width: 10%">
+                            Enrolling
+                        </div>
+                    </div>
+                    <div style="font-size: 14px;padding: 0 20px 0 10px">{!trial.ctp.Official_Title__c}</div>
+<!--                </div>-->
+                <button class="apollo-btn primary button-ctp">
+                    Button
+                </button>
+            </div>
+
+        </aura:iteration>
+
+    </aura:if>
 </aura:component>
