--- a/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
+++ b/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
@@ -7,6 +7,7 @@
 .THIS .filter-side {
     padding-left: 4%;
     padding-top: 70px;
+    position: fixed;
 }
 
 .THIS.width-limiter {
@@ -35,6 +36,7 @@
     .THIS .filter-side{
         padding-left: 4%;
         margin: 5% 0 0 0 !important;
+        position: relative;
     }
     .THIS .trials-side{
         border-right: 0;
