pass ConditionsOfInterestView to TrialSearchContainer

--- a/force-app/main/default/aura/ConditionsOfInterestView/ConditionsOfInterestView.cmp
+++ b/force-app/main/default/aura/ConditionsOfInterestView/ConditionsOfInterestView.cmp
@@ -6,7 +6,8 @@
 
     <aura:attribute name="conditionOfInterestList" type="Object[]"/>
     <aura:attribute name="searchResults" type="Object[]"/>
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+<!--    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>-->
 
     <aura:registerEvent name="updateSearchEvent" type="c:UpdateConditionsOfInterestSearchEvt"/>
 
