PEH-950(49) add 'not search ctp message'

--- a/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
+++ b/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
@@ -32,8 +32,9 @@
                     Button
                 </button>
             </div>
-
         </aura:iteration>
-
+        <aura:set attribute="else">
+            <div class="not-ctp-message"> No trial matches available at this time.  Check back shortly.</div>
+        </aura:set>
     </aura:if>
 </aura:component>
