--- a/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.cmp
+++ b/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.cmp
@@ -8,6 +8,7 @@
     <aura:attribute name="taps" type="List"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="updateSearchEvent" event="c:UpdateConditionsOfInterestSearchEvt" action="{!c.handleUpdateSearchEvent}"/>
 
 
     <lightning:layout horizontalAlign="center" class="width-limiter">
