--- a/force-app/main/default/aura/TrialsContainer/TrialsContainer.css
+++ b/force-app/main/default/aura/TrialsContainer/TrialsContainer.css
@@ -24,7 +24,7 @@
 }
 
 .THIS .button-ctp {
-    margin: 10px 0 10px 10px;
+    margin: 10px 0 15px 15px;
 }
 
 .THIS.not-ctp-message {
@@ -37,7 +37,6 @@
 }
 
 .THIS .tap-class {
-    padding: 5px 20px 5px 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -48,7 +47,6 @@
 }
 
 .THIS .ctp-info-block {
-    padding: 5px 20px 5px 10px;
     display: flex;
 }
 
@@ -72,11 +70,14 @@
 }
 
 .THIS .cpt-official-title {
-    padding: 5px 20px 5px 10px;
     color: #000000;
     font-family: "Proxima Nova";
     font-size: 16px;
     line-height: 24px;
+}
+
+.THIS .ctp-padding {
+    padding: 5px 20px 5px 15px;
 }
 
 
