--- a/force-app/main/default/aura/StudyListView/StudyListView.cmp
+++ b/force-app/main/default/aura/StudyListView/StudyListView.cmp
@@ -29,6 +29,7 @@
     <aura:attribute name="currentPageList" type="List"/>
     <aura:attribute name="skipUpdate" type="Boolean" default="false" access="private"/>
     <aura:attribute name="accessUserLevel" type="String"/>
+    <aura:attribute name="piId" type="String"/>
     <aura:attribute name="checkedAccountWasCreated" type="Boolean" default="false"/>
     <aura:attribute name="showPopUpSpinner" type="Boolean" default="false"/>
 
@@ -142,7 +143,7 @@
                 <div style="position: relative; min-height: 100px;" class="slds-gutters_">
                     <c:RRSpinner aura:id="recordsSpinner" size="medium" showSpinner="false"/>
                     <aura:iteration items="{!v.currentPageList}" var="trial">
-                        <c:StudyCard currentStudy = "{!trial}" userMode="{!v.userMode}" parent="{!this}" detailsExpanded="false"/>
+                        <c:StudyCard currentStudy = "{!trial}" userMode="{!v.userMode}" parent="{!this}" detailsExpanded="false" accessUserLevel="{!v.accessUserLevel}"/>
                     </aura:iteration>
                 </div>
             </div>
