--- a/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
+++ b/force-app/main/default/aura/TrialSearchContainer/TrialSearchContainer.css
@@ -36,6 +36,7 @@
     }
     .THIS .filter-side{
         padding-left: 4%;
+        padding-top: 20px;
         margin: 5% 0 0 0 !important;
         position: relative;
     }
