--- a/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
+++ b/force-app/main/default/aura/TrialsContainer/TrialsContainer.cmp
@@ -3,37 +3,11 @@
  -->
 <aura:component description="TrialsContainer">
     <aura:attribute name="trialTDOs" type="List"/>
+    <aura:attribute name="participant" type="Participant__c" access="public"/>
 
     <aura:if isTrue="{!v.trialTDOs}">
         <aura:iteration items="{!v.trialTDOs}" var="trial">
-            <div class="card-ctp">
-                <div class="{!trial.isEnrollingCTP ? ' top-line' : ''}"></div>
-                <div class="tap-class ctp-padding">
-                    Therapeutic area :
-                    <aura:if isTrue="{!trial.cois}">
-                        <aura:iteration items="{!trial.cois}" var="coi">
-                            {!coi.Name + ', '}
-                        </aura:iteration>
-                    </aura:if>
-                </div>
-                <div style="height: 1px;background: #848484;"></div>
-                <div class="ctp-info-block ctp-padding">
-                    <div class="ctp-study-code-name">
-                        {!trial.ctp.Study_Code_Name__c}
-                    </div>
-                    <aura:if isTrue="{!trial.ctp.Recruitment_Status__c}">
-                        <div class="ctp-recruitment-status">
-                            {!trial.ctp.Recruitment_Status__c}
-                        </div>
-                    </aura:if>
-                </div>
-                <div class="cpt-official-title ctp-padding">
-                    {!trial.ctp.Official_Title__c}
-                </div>
-                <button class="apollo-btn primary button-ctp">
-                    {!trial.isEnrollingCTP ? 'Contact the study' : 'Alert me when enrollment starts'}
-                </button>
-            </div>
+            <c:TrialItem trialTDO="{!trial}" participant="{!v.participant}"/>
         </aura:iteration>
         <aura:set attribute="else">
             <div class="not-ctp-message"> No trial matches available at this time. Check back shortly.</div>
